dist/softctf-are-you-ready/Deployment.are-you-ready-app.k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: are-you-ready-app
  namespace: softctf-are-you-ready
spec:
  replicas: 1
  selector:
    matchLabels:
      app: are-you-ready-app
  template:
    metadata:
      labels:
        app: are-you-ready-app
    spec:
      containers:
        - image: nginx:latest
          name: are-you-ready-app
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 50m
              memory: 128Mi
