dist/softctf-are-you-ready/Service.are-you-ready-service.k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: are-you-ready-service
  namespace: soft-ctf-are-you-ready
spec:
  ports:
    - port: 80
      targetPort: 80
    - port: 443
      targetPort: 443
  selector:
    app: are-you-ready-app
  type: ClusterIP
