dist/softctf-are-you-ready/IngressRoute.are-you-ready-ingress.k8s.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: are-you-ready-ingress
  namespace: softctf-are-you-ready
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`test-database-helloworld.miello.dev`)
      services:
        - name: are-you-ready-service
          port: 80
